# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./members";
 export * from "./events";
 export * from "./eventAttendees";
+export * from "./settings";
